<resources>
    <string name="app_name">SororAndroid</string>

    <string name="dummy_text_heading">Lorem Ipsum</string>
    <string name="dummy_text_sub_title">Lorem Ipsum Dolor Sit Amet, Consetetur Sadipscing Elitr, Sed Diam Nonumy Eirmod Tempor Invidunt Ut Labore Et.</string>

    <string name="welcome_text">Welcome,</string>
    <string name="create_account_sign_up">Create Account</string>
    <string name="divider_text_sign_up">or</string>
    <string name="already_have_account_text">Already have account?</string>
    <string name="terms_text">By singing up, you agree to our terms of Service and acknowledge that you have read our Privacy Policy</string>

    <!--    actions-->
    <string name="action_login">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="action_sign_up_with_google">Sign Up With Google</string>

    <!--    prompts-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email_mandatory">Email*</string>
    <string name="prompt_password_mandatory">Password*</string>
    <string name="prompt_name_mandatory">Name*</string>
    <string name="prompt_phone">Phone Number (Optional)</string>
    <string name="prompt_confirm_password_mandatory">Confirm Password*</string>

    <string name="dummy_image">image</string>
    <string name="lets_sign_in_text">Lets sign in</string>
    <string name="welcome_back_text">Welcome Back</string>
    <string name="credentials_use_text">Please Use Your Soror Credentials</string>
    <string name="forget_password_text">Forget Password</string>
    <string name="action_register">Register</string>
    <string name="don_t_have_an_account_text">Don’t have an account?</string>
    <string name="didn_t_receive_a_code_text">Didn’t receive a code?</string>
    <string name="action_verify">Verify</string>
    <string name="action_resend_code">Resend code</string>
    <string name="please_enter_your_code_here_text">Please enter your code here</string>
    <string name="otp_verification_sub_title_text">We are sending you an OTP to verify your Phone Number/Email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="congratulations_text">Congratulations</string>
    <string name="action_do_it_later">Do it later</string>
    <string name="action_complete_your_profile">Complete Your Profile</string>
    <string name="subtitle_2_welcome">As a first time user, visit your profile and update your details</string>
    <string name="subtitle_welcome_text">You have registered Successfully!</string>
    <string name="to_connect">To Connect</string>
    <string name="to_connect_subtitle">Butterflies, avocados, and all the pretty things around, including You make sense when you have a wonderful friend to talk to!</string>
    <string name="title_public_profile">Public Profile</string>
    <string name="title_social_media">Social Media</string>
    <string name="title_what_s_your_thing">What’s Your Thing</string>

    <!--    arrays-->
    <string-array name="countryCode">
        <item>IN +91</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_let_connect">Let\'s Connect</string>
    <string name="action_send">Send</string>
    <string name="prompt_send_message">Send Message</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_connections">Connections</string>
    <string name="title_profile">My Profile</string>
</resources>