<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/dummyImage"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/dummy_image"
        android:src="@drawable/dummy_image_on_boarding"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/titleWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/congratulations_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/subTitleWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/subtitle_welcome_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintTop_toBottomOf="@id/titleWelcome" />

    <TextView
        android:id="@+id/subTitle2Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/subtitle_2_welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintTop_toBottomOf="@id/subTitleWelcome" />

    <TextView
        android:id="@+id/onBoardingLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/action_button_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/action_complete_your_profile"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/doItLaterWelcome"
        app:layout_constraintTop_toBottomOf="@id/subTitle2Welcome"
        app:layout_constraintVertical_bias="0.99" />


    <TextView
        android:id="@+id/doItLaterWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/action_do_it_later"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>