<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/backButtonLogin"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/dummy_image"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButtonLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <TextView
                android:id="@+id/letsSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_sign_in_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcomeBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/welcome_back_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/letsSignIn" />

            <TextView
                android:id="@+id/useCredentialsLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credentials_use_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeBackLogin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:boxBackgroundColor="@color/edit_box_color"
                app:boxStrokeColor="@color/color_primary_dark"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/useCredentialsLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/edit_box_color"
                app:boxStrokeColor="@color/color_primary_dark"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgetPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/forget_password_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dividerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forgetPasswordLogin">

                <TextView
                    android:id="@+id/dividerTextLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/divider_text_sign_up"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerLine1Login"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/line_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/dividerTextLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/dividerLine2Login"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/line_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dividerTextLogin"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/facebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/fb"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/action_sign_up_with_facebook"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintTop_toBottomOf="@id/dividerLogin" />

            <Button
                android:id="@+id/googleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/action_sign_up_with_google"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintTop_toBottomOf="@id/facebookLogin" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newUserLoginLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/googleLogin">

                <TextView
                    android:id="@+id/newUserLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signUpTextLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/action_register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/color_primary_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/newUserLogin"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/action_button_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/action_login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/newUserLoginLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>