<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingActivity">

    <ImageView
        android:id="@+id/dummyImage"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:contentDescription="@string/dummy_image"
        android:src="@drawable/to_connect"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toConnectLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/onBoardingLoginButton"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/titleOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/to_connect"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subTitleOnBoarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitleOnBoarding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/to_connect_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/titleOnBoarding"
            app:layout_constraintStart_toStartOf="@id/titleOnBoarding"
            app:layout_constraintTop_toBottomOf="@id/titleOnBoarding" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/onBoardingLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/action_button_background"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/action_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/onBoardingSignUpButton"
        app:layout_constraintEnd_toEndOf="@id/toConnectLayout"
        app:layout_constraintStart_toStartOf="@id/toConnectLayout" />

    <TextView
        android:id="@+id/onBoardingSignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/action_button_outline"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/color_primary_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/toConnectLayout"
        app:layout_constraintStart_toStartOf="@id/toConnectLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>